--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="650px"
-        android:scaleType="centerCrop"
-        app:srcCompat="@color/colorAccent"
-        />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="650px"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        app:srcCompat="@color/colorAccent"-->
+<!--        />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/takePhoto"-->
+<!--        android:layout_width="179dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignTop="@+id/gallery"-->
+<!--        android:layout_marginEnd="13dp"-->
+<!--        android:text="Take"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_marginRight="13dp" />-->
+
+
+
+
+<!--    <Button-->
+<!--        android:id="@+id/gallery"-->
+<!--        android:layout_width="179dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_marginBottom="120dp"-->
+<!--        android:layout_marginStart="12dp"-->
+<!--        android:text="Gallery"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:layout_marginLeft="12dp" />-->
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/takePhoto"
-        android:layout_width="179dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/gallery"
-        android:layout_marginEnd="13dp"
+        android:layout_width="98dp"
+        android:layout_height="82dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="64dp"
         android:text="Take"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="13dp" />
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="98dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="64dp"
+        android:text="Upload"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/takePhoto"
+        app:layout_constraintStart_toEndOf="@+id/gallery" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="650px"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/colorAccent" />
 
     <Button
         android:id="@+id/gallery"
-        android:layout_width="179dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="120dp"
-        android:layout_marginStart="12dp"
-        android:text="Gallery"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="12dp" />
-</RelativeLayout>
+        android:layout_width="98dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="64dp"
+        android:text="Pick"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
