--- a/app/src/main/res/layout/compilation_dialog.xml
+++ b/app/src/main/res/layout/compilation_dialog.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
-
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/googleText"
+        android:id="@+id/compilationText"
         android:textSize="14sp"
         android:textColor="#000"
         android:text=""
         android:gravity="center"
         />
-
 
 </LinearLayout>
